Put CSV files and code for reading them in jupyter nb

--- a/DBSCAN_init.ipynb
+++ b/DBSCAN_init.ipynb
@@ -20,6 +20,13 @@
    "source": [
     "import sklearn as sk\n",
     "from sklearn import cluster\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv(\"COBRA-2019.csv\", sep=',', header=0, engine='python')\n",
+    "X = data.as_matrix()\n",
+    "\n",
     "sk.cluster.DBSCAN()"
    ]
   },
