--- a/Unsupervised_Algs.ipynb
+++ b/Unsupervised_Algs.ipynb
@@ -760,6 +760,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "# hex_number = str(hex(random_number))\n",
+    "# hex_number = '#' + hex_number[2:]\n",
+    "# print('A Random Hex Color Code is :', hex_number)\n",
+    "randomNums = [random.randint(0, 255) for i in range(3 * num_clusters)]\n",
+    "hexes = [hex(r)[2:] if len(hex(r)[2:]) == 2 else '0' + hex(r)[2:] for r in randomNums]\n",
+    "# print(hexes)\n",
+    "cluster_colors = ['#' + ''.join([hexes[j] for j in range(3 * i, 3 * i + 3)]) for i in range(num_clusters)]\n",
+    "# cluster_colors = ['#' + ''.join([hex(random.randint(0, 255))[2:] for i in range(3)]) for j in range(num_clusters)]\n",
+    "# print(cluster_colors, len(cluster_colors))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -819,6 +837,67 @@
     "ax.set_xlabel('Longitude')\n",
     "ax.set_ylabel('Latitude')\n",
     "ax.legend([df_scatter, rs_scatter], ['Full set', 'Reduced set'], loc='upper right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=[10, 6])\n",
+    "# df_scatter = ax.scatter(df['Longitude'], df['Latitude'], c='k', alpha=0.9, s=3)\n",
+    "#     for x in range(len(cluster_labels)):\n",
+    "#         if cluster_labels[x] == i:\n",
+    "c_by_ind = [[] for i in range(num_clusters)]\n",
+    "for x in range(len(cluster_labels)):\n",
+    "    c_by_ind[cluster_labels[x]].append(x)\n",
+    "for i in range(num_clusters):\n",
+    "    rs_scatter = ax.scatter(rs['Longitude'][i], rs['Latitude'][i], c=cluster_colors[i], edgecolor='None', alpha=0.7, s=120)\n",
+    "    for e in c_by_ind[i]:\n",
+    "        df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_colors[i], alpha=0.9, s=3)\n",
+    "#     for x in range(len(cluster_labels)):\n",
+    "#         if cluster_labels[x] == i:\n",
+    "#             df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "#     for point in clusters[i]:\n",
+    "#         indexNames = [x for x in df[df['Longitude'] == point[1]].index if x in df[df['Latitude'] == point[0]].index]\n",
+    "#         for e in indexNames:\n",
+    "#             df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "#     df_scatter = ax.scatter(clusters[i], clusters[i], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "ax.set_title('Full data set vs DBSCAN reduced set')\n",
+    "ax.set_xlabel('Longitude')\n",
+    "ax.set_ylabel('Latitude')\n",
+    "# ax.legend([df_scatter, rs_scatter], ['Full set', 'Reduced set'], loc='upper right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=[10, 6])\n",
+    "# df_scatter = ax.scatter(df['Longitude'], df['Latitude'], c='k', alpha=0.9, s=3)\n",
+    "#     for x in range(len(cluster_labels)):\n",
+    "#         if cluster_labels[x] == i:\n",
+    "for i in range(num_clusters):\n",
+    "    for e in c_by_ind[i]:\n",
+    "        df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_colors[i], alpha=0.9, s=3)\n",
+    "rs_scatter = ax.scatter(rs['Longitude'], rs['Latitude'], c=\"k\", edgecolor='None', alpha=0.7, s=16)\n",
+    "#     for x in range(len(cluster_labels)):\n",
+    "#         if cluster_labels[x] == i:\n",
+    "#             df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "#     for point in clusters[i]:\n",
+    "#         indexNames = [x for x in df[df['Longitude'] == point[1]].index if x in df[df['Latitude'] == point[0]].index]\n",
+    "#         for e in indexNames:\n",
+    "#             df_scatter = ax.scatter(df['Longitude'][e], df['Latitude'][e], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "#     df_scatter = ax.scatter(clusters[i], clusters[i], c=cluster_color_assigns[i], alpha=0.9, s=3)\n",
+    "ax.set_title('Full data set vs DBSCAN reduced set')\n",
+    "ax.set_xlabel('Longitude')\n",
+    "ax.set_ylabel('Latitude')\n",
+    "# ax.legend([df_scatter, rs_scatter], ['Full set', 'Reduced set'], loc='upper right')\n",
     "plt.show()"
    ]
   },
