--- a/Supervised_Algs.ipynb
+++ b/Supervised_Algs.ipynb
@@ -112,6 +112,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation (Under Construction).."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
