--- a/Supervised_Algs.ipynb
+++ b/Supervised_Algs.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,9 @@
     "from sklearn.model_selection import train_test_split # Import train_test_split function\n",
     "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation\n",
     "from sklearn import preprocessing\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC\n",
     "import datetime\n",
     "import random"
    ]
@@ -86,7 +89,7 @@
        "      <td>Day</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>93912</td>\n",
+       "      <td>85669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -94,7 +97,7 @@
        "      <td>Day</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>20634</td>\n",
+       "      <td>89994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -102,7 +105,7 @@
        "      <td>Day</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>49766</td>\n",
+       "      <td>19484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -110,7 +113,7 @@
        "      <td>Evening</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>90549</td>\n",
+       "      <td>70095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -118,7 +121,7 @@
        "      <td>Evening</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>69844</td>\n",
+       "      <td>69115</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,11 +129,11 @@
       ],
       "text/plain": [
        "  Neighborhood Shift Occurence  Day of Week  Month  Crime Score\n",
-       "0   Greenbriar             Day            3      1        93912\n",
-       "1     Downtown             Day            3      1        20634\n",
-       "2        Lenox             Day            3      1        49766\n",
-       "3   Greenbriar         Evening            3      1        90549\n",
-       "4     Edgewood         Evening            3      1        69844"
+       "0   Greenbriar             Day            3      1        85669\n",
+       "1     Downtown             Day            3      1        89994\n",
+       "2        Lenox             Day            3      1        19484\n",
+       "3   Greenbriar         Evening            3      1        70095\n",
+       "4     Edgewood         Evening            3      1        69115"
       ]
      },
      "execution_count": 2,
@@ -172,8 +175,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transforming the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +221,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>93912</td>\n",
+       "      <td>85669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -219,7 +229,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>20634</td>\n",
+       "      <td>89994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -227,7 +237,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>49766</td>\n",
+       "      <td>19484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -235,7 +245,7 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>90549</td>\n",
+       "      <td>70095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -243,7 +253,7 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>69844</td>\n",
+       "      <td>69115</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -251,14 +261,14 @@
       ],
       "text/plain": [
        "   Neighborhood  Shift Occurence  Day of Week  Month  Crime Score\n",
-       "0            86                0            3      1        93912\n",
-       "1            64                0            3      1        20634\n",
-       "2           111                0            3      1        49766\n",
-       "3            86                1            3      1        90549\n",
-       "4            70                1            3      1        69844"
+       "0            86                0            3      1        85669\n",
+       "1            64                0            3      1        89994\n",
+       "2           111                0            3      1        19484\n",
+       "3            86                1            3      1        70095\n",
+       "4            70                1            3      1        69115"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,12 +279,13 @@
     "data[\"Neighborhood\"] = le.transform(data[\"Neighborhood\"])\n",
     "le.fit(data[\"Shift Occurence\"])\n",
     "data[\"Shift Occurence\"] = le.transform(data[\"Shift Occurence\"])\n",
+    "\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,15 +410,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Metrics & Plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.09376949817274267\n"
+      "Accuracy: 0.09479454496835725\n"
      ]
     }
    ],
@@ -422,13 +440,6 @@
     "        count += 1\n",
     "    i += 1\n",
     "print(\"Accuracy:\", count / int(len(y_test) * 0.25))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Decision Tree Metrics & Plots"
    ]
   },
   {
@@ -1467,11 +1478,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Source: https://www.datacamp.com/community/tutorials/random-forests-classifier-python\n",
+    "\n",
+    "# Keeps on prompting a restart of the kernel\n",
+    "\n",
+    "# Create a Gaussian Classifier\n",
+    "rf_clf = RandomForestClassifier(n_estimators=50)\n",
+    "\n",
+    "# Train the model using the training sets y_pred=clf.predict(X_test)\n",
+    "rf_clf = rf_clf.fit(X_train[:int(len(X_train) * 0.1)], y_train[:int(len(y_train) * 0.1)])\n",
+    "\n",
+    "rf_y_pred = rf_clf.predict(X_test[:int(len(X_test) * 0.1)])\n",
+    "rf_predictions_probability = rf_clf.predict_proba(X_test[:int(len(X_test) * 0.1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy within range 5000 (50 crime score point difference)\n",
+    "count = 0\n",
+    "i = 0\n",
+    "for keys in y_test:\n",
+    "    if i >= int(len(y_test) * 0.1):\n",
+    "        break\n",
+    "    if (keys - rf_y_pred[i] >= 0 and keys - rf_y_pred[i] <= 5000):\n",
+    "        count += 1\n",
+    "    elif (keys - rf_y_pred[i] <= 0 and keys - rf_y_pred[i] >= -5000):\n",
+    "        count += 1\n",
+    "    i += 1\n",
+    "print(\"Accuracy:\", count / int(len(y_test) * 0.25))\n",
+    "# print(\"Precision:\", metrics.precision_score(y_test[:int(len(y_test) * 0.25)], rf_y_pred))\n",
+    "# print([keys for keys in y_test[:int(len(y_test) * 0.25)]])\n",
+    "# print(rf_y_pred)\n",
+    "# print(\"Precision:\", metrics.precision_score([keys for keys in y_test[:int(len(y_test) * 0.25)]], rf_y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NBC Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnb = GaussianNB()\n",
+    "gnb = gnb.fit(X_train[:int(len(X_train) * 0.25)], y_train[:int(len(y_train) * 0.25)])\n",
+    "\n",
+    "nbc_y_pred = gnb.predict(X_test[:int(len(X_test) * 0.25)])\n",
+    "nbc_predictions_probability = gnb.predict_proba(X_test[:int(len(X_test) * 0.25)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.0921205098493627\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy within range 5000 (50 crime score point difference)\n",
+    "count = 0\n",
+    "i = 0\n",
+    "for keys in y_test:\n",
+    "    if i >= int(len(y_test) * 0.25):\n",
+    "        break\n",
+    "    if (keys - nbc_y_pred[i] >= 0 and keys - nbc_y_pred[i] <= 5000):\n",
+    "        count += 1\n",
+    "    elif (keys - nbc_y_pred[i] <= 0 and keys - nbc_y_pred[i] >= -5000):\n",
+    "        count += 1\n",
+    "    i += 1\n",
+    "print(\"Accuracy:\", count / int(len(y_test) * 0.25))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_clf = SVC(gamma='auto')\n",
+    "svm_clf = svm_clf.fit(X_train[:int(len(X_train) * 0.25)], y_train[:int(len(y_train) * 0.25)])\n",
+    "\n",
+    "svm_y_pred = svm_clf.predict(X_test[:int(len(X_test) * 0.25)])\n",
+    "svm_predictions_probability = svm_clf.predict_proba(X_test[:int(len(X_test) * 0.25)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy within range 5000 (50 crime score point difference)\n",
+    "count = 0\n",
+    "i = 0\n",
+    "for keys in y_test:\n",
+    "    if i >= int(len(y_test) * 0.25):\n",
+    "        break\n",
+    "    if (keys - svm_y_pred[i] >= 0 and keys - svm_y_pred[i] <= 5000):\n",
+    "        count += 1\n",
+    "    elif (keys - svm_y_pred[i] <= 0 and keys - svm_y_pred[i] >= -5000):\n",
+    "        count += 1\n",
+    "    i += 1\n",
+    "print(\"Accuracy:\", count / int(len(y_test) * 0.25))"
+   ]
   }
  ],
  "metadata": {
