--- a/Dict to DataFrame.ipynb
+++ b/Dict to DataFrame.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import Libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,90 +24,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 224,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                      Morning           Day       Evening\n",
-      "Adair Park 1  0  (0, 0, 1, 1)  (0, 0, 3, 4)  (0, 1, 2, 4)\n",
-      "              1  (0, 0, 2, 1)  (0, 4, 3, 2)  (0, 1, 3, 3)\n",
-      "              2  (0, 0, 0, 1)  (0, 1, 1, 2)  (0, 0, 4, 3)\n",
-      "              3  (0, 2, 0, 0)  (0, 0, 3, 3)  (0, 1, 2, 5)\n",
-      "              4  (0, 0, 2, 1)  (0, 1, 5, 3)  (0, 3, 4, 3)\n",
-      "              5  (0, 2, 0, 2)  (0, 1, 5, 1)  (0, 4, 3, 4)\n",
-      "              6  (0, 1, 3, 1)  (0, 0, 4, 1)  (0, 3, 4, 2)\n",
-      "           2  0  (0, 0, 1, 1)  (0, 1, 3, 4)  (0, 6, 5, 2)\n",
-      "              1  (0, 0, 2, 2)  (0, 2, 1, 2)  (0, 4, 0, 4)\n",
-      "              2  (0, 0, 2, 1)  (0, 0, 4, 2)  (0, 1, 2, 5)\n",
-      "              3  (0, 0, 0, 2)  (0, 2, 3, 2)  (0, 1, 2, 4)\n",
-      "              4  (0, 0, 1, 2)  (0, 2, 5, 1)  (0, 1, 2, 5)\n",
-      "              5  (0, 0, 0, 0)  (0, 2, 1, 2)  (0, 1, 2, 4)\n",
-      "              6  (0, 1, 1, 2)  (0, 2, 2, 2)  (0, 1, 2, 1)\n",
-      "           3  0  (0, 0, 1, 1)  (0, 2, 3, 4)  (0, 4, 3, 5)\n",
-      "              1  (0, 0, 1, 1)  (0, 0, 4, 2)  (0, 1, 4, 3)\n",
-      "              2  (0, 1, 1, 1)  (0, 0, 3, 1)  (1, 3, 4, 3)\n",
-      "              3  (0, 0, 1, 2)  (0, 2, 5, 4)  (0, 3, 0, 5)\n",
-      "              4  (0, 1, 2, 0)  (0, 0, 1, 4)  (0, 0, 2, 4)\n",
-      "              5  (0, 0, 1, 4)  (0, 2, 2, 1)  (0, 1, 2, 5)\n",
-      "              6  (0, 1, 0, 2)  (0, 1, 3, 2)  (0, 1, 1, 4)\n",
-      "           4  0  (1, 0, 0, 1)  (0, 2, 2, 5)  (0, 6, 4, 5)\n",
-      "              1  (0, 1, 0, 5)  (0, 0, 4, 2)  (0, 3, 5, 5)\n",
-      "              2  (0, 0, 1, 3)  (0, 2, 2, 6)  (2, 4, 3, 5)\n",
-      "              3  (0, 2, 0, 1)  (0, 0, 3, 2)  (0, 3, 1, 1)\n",
-      "              4  (0, 2, 1, 1)  (0, 0, 6, 1)  (0, 3, 5, 0)\n",
-      "              5  (0, 4, 2, 3)  (0, 0, 1, 1)  (1, 2, 4, 0)\n",
-      "              6  (0, 0, 4, 2)  (0, 2, 6, 1)  (0, 2, 2, 4)\n",
-      "           5  0  (0, 0, 1, 3)  (0, 2, 4, 4)  (0, 1, 3, 0)\n",
-      "              1  (0, 1, 3, 2)  (0, 2, 5, 5)  (0, 6, 4, 5)\n",
-      "...                       ...           ...           ...\n",
-      "Wyngate    8  5  (0, 1, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              6  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "           9  0  (0, 0, 0, 0)  (0, 1, 0, 3)  (0, 0, 1, 0)\n",
-      "              1  (0, 0, 0, 0)  (0, 0, 1, 2)  (0, 0, 0, 1)\n",
-      "              2  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 0)\n",
-      "              3  (0, 0, 0, 0)  (0, 0, 0, 3)  (0, 0, 0, 0)\n",
-      "              4  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 2)\n",
-      "              5  (0, 0, 0, 0)  (0, 0, 1, 0)  (0, 0, 0, 1)\n",
-      "              6  (0, 0, 1, 1)  (0, 0, 0, 1)  (0, 0, 0, 1)\n",
-      "           10 0  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              1  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 1)\n",
-      "              2  (0, 0, 0, 1)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              3  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 1)\n",
-      "              4  (0, 0, 0, 0)  (0, 1, 1, 3)  (0, 0, 0, 0)\n",
-      "              5  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 1)\n",
-      "              6  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 0)\n",
-      "           11 0  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 1)\n",
-      "              1  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              2  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 0)\n",
-      "              3  (0, 0, 1, 0)  (0, 0, 1, 0)  (0, 0, 0, 0)\n",
-      "              4  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 1)\n",
-      "              5  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 2)\n",
-      "              6  (0, 0, 0, 0)  (0, 0, 2, 0)  (0, 0, 0, 0)\n",
-      "           12 0  (0, 0, 0, 0)  (0, 0, 0, 1)  (0, 0, 0, 1)\n",
-      "              1  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              2  (0, 0, 0, 0)  (0, 0, 1, 0)  (0, 0, 0, 0)\n",
-      "              3  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 1)\n",
-      "              4  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              5  (0, 0, 0, 1)  (0, 0, 0, 0)  (0, 0, 0, 0)\n",
-      "              6  (0, 0, 0, 0)  (0, 0, 0, 0)  (0, 0, 1, 0)\n",
-      "\n",
-      "[16800 rows x 3 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Shift</th>\n",
+       "      <th>Category 1</th>\n",
+       "      <th>Category 2</th>\n",
+       "      <th>Category 3</th>\n",
+       "      <th>Category 4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adair Park</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adair Park</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adair Park</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Evening</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adair Park</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adair Park</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Neighborhood  Month  Day    Shift  Category 1  Category 2  Category 3  \\\n",
+       "0   Adair Park      1    0  Morning           0           0           1   \n",
+       "1   Adair Park      1    0      Day           0           0           3   \n",
+       "2   Adair Park      1    0  Evening           0           1           2   \n",
+       "3   Adair Park      1    1  Morning           0           0           2   \n",
+       "4   Adair Park      1    1      Day           0           4           3   \n",
+       "\n",
+       "   Category 4  \n",
+       "0           1  \n",
+       "1           4  \n",
+       "2           4  \n",
+       "3           1  \n",
+       "4           2  "
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Turn nested dict into dataframe\n",
     "data = pd.DataFrame.from_dict({(i,j,k): user_dict[i][j][k]\n",
     "                           for i in user_dict.keys() \n",
     "                           for j in user_dict[i].keys()\n",
     "                           for k in user_dict[i][j].keys()},\n",
-    "                           #for l in user_dict[i][j][k]},\n",
     "                       orient='index')\n",
-    "print(data)"
+    "\n",
+    "#Turn multiindex into single index\n",
+    "data.reset_index(inplace=True)\n",
+    "\n",
+    "#turn shifts from three features to a single feature \n",
+    "data = data.melt(id_vars=[\"level_0\", \"level_1\",\"level_2\"], var_name=\"Shift\", value_name=\"Categories\")\n",
+    "data = data.sort_values([\"level_0\", \"level_1\",\"level_2\"])\n",
+    "data = data.reset_index(drop=True)\n",
+    "\n",
+    "#rename features\n",
+    "data.rename(columns={'level_0': 'Neighborhood', 'level_1': 'Month', 'level_2': 'Day'}, inplace=True)\n",
+    "\n",
+    "#Turn category tuple into 4 features\n",
+    "new_col_list = ['Category 1','Category 2','Category 3','Category 4']\n",
+    "for n,col in enumerate(new_col_list):\n",
+    "    data[col] = data['Categories'].apply(lambda cat: cat[n])\n",
+    "\n",
+    "data = data.drop('Categories',axis=1)\n",
+    "\n",
+    "data.to_csv(\"cobra-counts.csv\", index=False)\n",
+    "\n",
+    "data.head()"
    ]
   },
   {
