New algs2 (my bad), also had to make sure nobody lost any files

--- a/Supervised_Algs.ipynb
+++ b/Supervised_Algs.ipynb
@@ -39,7 +39,8 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC\n",
     "import datetime\n",
-    "import random"
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
