Updated approach text

--- a/Unsupervised_Algs.ipynb
+++ b/Unsupervised_Algs.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
     "plt.ylabel('Average Crime Score')\n",
     "plt.title('Atlanta Crime Scores by Neighborhood (2019)')\n",
     "\n",
-    "#plt.savefig('images/Unsupervised_Algs/crimescore2019_histogram.png')\n",
+    "plt.savefig('images/Unsupervised_Algs/crimescore2019_histogram.png')\n",
     "plt.show()\n",
     "plt.rcParams.update(plt.rcParamsDefault)"
    ]
